# mujoco_robots_ws

./: README.md
dyros_robotics_suite/dyros_robot_controller/: CMakeLists.txt  package.xml
dyros_robotics_suite/dyros_robot_controller/config/: mppi_cost_husky_fr3.yaml  mppi_husky_fr3.yaml  teleop_twist_joy.yaml
dyros_robotics_suite/dyros_robot_controller/dyros_robot_controller/: __init__.py  utils.py
dyros_robotics_suite/dyros_robot_controller/dyros_robot_controller/fr3_controller/: ros2_qt_gui.py
dyros_robotics_suite/dyros_robot_controller/dyros_robot_controller/husky_controller/: controller.py  ros2_qt_gui.py
dyros_robotics_suite/dyros_robot_controller/dyros_robot_controller/husky_fr3_controller/: interactive_marker.py  ros2_qt_gui.py
dyros_robotics_suite/dyros_robot_controller/dyros_robot_controller/pcv_controller/: controller.py  ros2_qt_gui.py
dyros_robotics_suite/dyros_robot_controller/dyros_robot_controller/piper_controller/: controller.py  robot_data.py
dyros_robotics_suite/dyros_robot_controller/dyros_robot_controller/ur5e_controller/: controller.py  robot_data.py  ros2_qt_gui.py
dyros_robotics_suite/dyros_robot_controller/dyros_robot_controller/xls_controller/: controller.py  ros2_qt_gui.py
dyros_robotics_suite/dyros_robot_controller/include/: math_type_define.h
dyros_robotics_suite/dyros_robot_controller/include/fr3_controller/: controller.h  robot_data.h
dyros_robotics_suite/dyros_robot_controller/include/husky_dual_fr3_controller/: controller.h  robot_data.h
dyros_robotics_suite/dyros_robot_controller/include/husky_fr3_controller/: controller.h  robot_data.h
dyros_robotics_suite/dyros_robot_controller/launch/: fr3_controller.launch.py  husky_controller.launch.py  husky_dual_fr3_controller.launch.py  husky_fr3_controller.launch.py  pcv_controller.launch.py  piper_controller.launch.py  ur5e_controller.launch.py  xls_controller.launch.py
dyros_robotics_suite/dyros_robot_controller/robot/: fr3_husky.srdf  husky_dual_fr3.urdf  husky_dual_fr3_vis.urdf  husky_fr3.srdf  husky_fr3.urdf  husky_fr3_vis.urdf  piper.urdf  ur5e.urdf
dyros_robotics_suite/dyros_robot_controller/rviz/: fr3_rviz.rviz  husky_dual_fr3_rviz.rviz  husky_fr3_rviz.rviz  ur5e_rviz.rviz
dyros_robotics_suite/dyros_robot_controller/src/fr3_controller/: controller.cpp  robot_data.cpp
dyros_robotics_suite/dyros_robot_controller/src/husky_dual_fr3_controller/: controller.cpp  robot_data.cpp
dyros_robotics_suite/dyros_robot_controller/src/husky_fr3_controller/: controller.cpp  robot_data.cpp
dyros_robotics_suite/mujoco_ros_sim/: CMakeLists.txt  package.xml
dyros_robotics_suite/mujoco_ros_sim/cmake/: MRSController.cmake
dyros_robotics_suite/mujoco_ros_sim/include/mujoco_ros_sim/: ControllerInterface.hpp  ControllerRegistry.hpp  JointDict.hpp
dyros_robotics_suite/mujoco_ros_sim/launch/: mujoco_ros.launch.py
dyros_robotics_suite/mujoco_ros_sim/mujoco_menagerie/agilex_piper/: piper.xml
dyros_robotics_suite/mujoco_ros_sim/mujoco_menagerie/dyros_pcv/: dyros_pcv.xml  scene.xml
dyros_robotics_suite/mujoco_ros_sim/mujoco_menagerie/fr3_husky/: fr3_husky.xml  scene.xml
dyros_robotics_suite/mujoco_ros_sim/mujoco_menagerie/fr3_xls/: fr3_xls.xml
dyros_robotics_suite/mujoco_ros_sim/mujoco_menagerie/franka_fr3_torque/: fr3.xml
dyros_robotics_suite/mujoco_ros_sim/mujoco_menagerie/husky/: husky.xml  scene.xml
dyros_robotics_suite/mujoco_ros_sim/mujoco_menagerie/husky_dual_fr3/: husky_dual_fr3.xml  scene.xml
dyros_robotics_suite/mujoco_ros_sim/mujoco_menagerie/husky_dual_fr3/assets/husky/: dual_arm_bulkhead.stl  dual_arm_bulkhead_original.stl
dyros_robotics_suite/mujoco_ros_sim/mujoco_menagerie/summit_xls/: summit_xls.xml
dyros_robotics_suite/mujoco_ros_sim/mujoco_ros_sim/: __init__.py  backup.txt  controller_interface.py  mujoco_ros_sim.py  utils.py
dyros_robotics_suite/mujoco_ros_sim/src/: ControllerRegistry.cpp  bindings.cpp
gl_depth_sim/gl_depth_sim/: CMakeLists.txt
gl_depth_sim/gl_depth_sim/include/gl_depth_sim/: sim_depth_camera.h
gl_depth_sim/gl_depth_sim/src/gl_depth_sim/: sim_depth_camera.cpp
robot_descriptions/fr3_moveit_config/: .setup_assistant  package.xml
sampling_based_control/mppi/: CMakeLists.txt  package.xml
sampling_based_control/mppi/include/mppi/utils/: savgol_filter.h
sampling_based_control/mppi/src/core/: solver.cpp
sampling_based_control/mppi/src/policies/: gaussian_policy.cpp
sampling_based_control/mppi_pinocchio/: CMakeLists.txt  package.xml
sampling_based_control/mppi_pinocchio/include/mppi_pinocchio/: model.h
sampling_based_control/mppi_pinocchio/src/: model.cpp
sampling_based_control/mppi_ros/: CMakeLists.txt  package.xml
sampling_based_control/mppi_ros/include/mppi_ros/: controller_interface.h  conversions.h  ros_params.h
sampling_based_control/mppi_ros/include/mppi_ros/husky_fr3/: cost.hpp  dynamics.hpp  node.hpp
sampling_based_control/mppi_ros/scripts/: record_data.py
sampling_based_control/mppi_ros/src/: controller_interface.cpp  conversions.cpp  husky_fr3_mppi_node.cpp  ros_params.cpp
sampling_based_control/mppi_ros/src/husky_fr3/: cost.cpp  dynamics.cpp  node.cpp
suhan_robot_model_tools/: CMakeLists.txt  README.md  package.xml
suhan_robot_model_tools/examples/: calculate_min_distance.py  dual_arm_with_conditions.py  planning_scene_to_vis_sim.py  trac_ik.py
suhan_robot_model_tools/src/: suhan_robot_model_tools_warpper.cpp
suhan_robot_model_tools/src/collision_checker/: planning_scene_collision_check.cpp  planning_scene_collision_check.h
suhan_robot_model_tools/src/constraints/: implicit_parallel_function.cpp  implicit_parallel_function.h  kinematics_constraint_functions.cpp  kinematics_constraint_functions.h
suhan_robot_model_tools/src/trac_ik_adapter/: trac_ik_adapter.cpp  trac_ik_adapter.h
suhan_robot_model_tools/srmt2/kinematics/: trac_ik.py
suhan_robot_model_tools/srmt2/planner/: rrt_connect.py
suhan_robot_model_tools/srmt2/planning_scene/: __init__.py  planning_scene.py  planning_scene_tools.py  visual_sim.py
suhan_robot_model_tools/srmt2/utils/: ros_utils.py
(+33 files in other folders)
