<?xml version="1.0"?>
<package format="3">
  <name>mppi</name>
  <version>0.1.0</version>
  <description>Model Predictive Path Integral control library</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
