<?xml version="1.0"?>
<package format="3">
  <name>mppi_pinocchio</name>
  <version>0.1.0</version>
  <description>Pinocchio-based kinematics/dynamics for MPPI</description>
  <maintainer email="yeonguk@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>pinocchio</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
