<?xml version="1.0"?>
<package format="3">
  <name>mppi_ros</name>
  <version>0.1.0</version>
  <description>mppi_ros package</description>
  <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>mppi</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>mppi_pinocchio</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
